--- a/index.html
+++ b/index.html
@@ -2,39 +2,112 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chatbot con Voz y Micrófono</title>
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
     body {
-      font-family: Arial, sans-serif;
-      padding: 2rem;
-      background: #f0f0f0;
+      font-family: 'Arial', sans-serif;
+      background: linear-gradient(135deg, #6e7fd8, #5c8bf0);
+      color: #fff;
+      padding: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      overflow: hidden;
     }
     #chat {
-      max-width: 600px;
-      margin: auto;
-      background: white;
-      padding: 1rem;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      background: #fff;
+      border-radius: 20px;
+      padding: 20px;
+      width: 100%;
+      max-width: 400px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+    }
+    h2 {
+      text-align: center;
+      margin-bottom: 20px;
+      font-size: 1.5rem;
+      color: #333;
     }
     #messages {
       height: 300px;
       overflow-y: auto;
       margin-bottom: 1rem;
-      padding: 0.5rem;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      background: #fafafa;
+      padding: 10px;
+      background-color: #f8f9fa;
+      border-radius: 10px;
+      box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
     }
     .message {
-      margin: 0.5rem 0;
-    }
-    .user { color: blue; }
-    .bot { color: green; }
-    input, button {
-      padding: 0.5rem;
+      margin: 10px 0;
       font-size: 1rem;
-      margin-right: 0.5rem;
+    }
+    .user {
+      color: #007bff;
+      text-align: right;
+    }
+    .bot {
+      color: #28a745;
+      text-align: left;
+    }
+    input[type="text"] {
+      width: calc(100% - 100px);
+      padding: 12px;
+      border-radius: 25px;
+      border: 2px solid #ccc;
+      margin-right: 10px;
+      font-size: 1rem;
+    }
+    button {
+      padding: 12px 18px;
+      background: #28a745;
+      border: none;
+      color: #fff;
+      font-size: 1rem;
+      border-radius: 25px;
+      cursor: pointer;
+      transition: background 0.3s;
+      margin-top: 10px;
+    }
+    button:hover {
+      background: #218838;
+    }
+    button:focus {
+      outline: none;
+    }
+    .icon {
+      font-size: 1.5rem;
+      background-color: #007bff;
+      border: none;
+      color: white;
+      border-radius: 50%;
+      padding: 10px;
+      cursor: pointer;
+      margin-top: 10px;
+      transition: background 0.3s;
+    }
+    .icon:hover {
+      background-color: #0056b3;
+    }
+
+    /* Mobile view adjustments */
+    @media (max-width: 600px) {
+      #chat {
+        width: 90%;
+      }
+      input[type="text"] {
+        width: 75%;
+      }
+      button, .icon {
+        width: 100%;
+        font-size: 1.2rem;
+      }
     }
   </style>
 </head>
@@ -42,10 +115,14 @@
   <div id="chat">
     <h2>Chatbot con Voz y Micrófono</h2>
     <div id="messages"></div>
-    <input type="text" id="input" placeholder="Escribe algo..." />
-    <button onclick="enviarMensaje()">Enviar</button>
-    <button onclick="escuchar()">🎤 Hablar</button>
-    <button onclick="callar()">🔇 Callar</button>
+    <div style="display: flex; flex-direction: column; align-items: center;">
+      <input type="text" id="input" placeholder="Escribe algo..." />
+      <div style="display: flex; justify-content: space-between; width: 100%; margin-top: 10px;">
+        <button onclick="enviarMensaje()">Enviar</button>
+        <button class="icon" onclick="escuchar()">🎤</button>
+      </div>
+      <button class="icon" onclick="callar()">🔇 Callar</button>
+    </div>
   </div>
 
   <script>
