--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chatbot con Voz y Micrófono</title>
+  <title>Chatbot con IA</title>
   <style>
     * {
       margin: 0;
@@ -113,7 +113,7 @@
 </head>
 <body>
   <div id="chat">
-    <h2>Chatbot con Voz y Micrófono</h2>
+    <h2>Chatbot con IA</h2>
     <div id="messages"></div>
     <div style="display: flex; flex-direction: column; align-items: center;">
       <input type="text" id="input" placeholder="Escribe algo..." />
